--- a/Sample/Properties/launchSettings.json
+++ b/Sample/Properties/launchSettings.json
@@ -3,26 +3,26 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44349/",
-      "sslPort": 44349
+      "applicationUrl": "http://localhost:60974/",
+      "sslPort": 44386
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:44399/",
+      "launchUrl": "https://localhost:44386/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Sample": {
-      "commandName": "IISExpress",
+      "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:51088"
+      "applicationUrl": "http://localhost:60975/"
     }
   }
 }
