--- a/FB.AspNetCore.Identity.MongoDB/FB.AspNetCore.Identity.MongoDB.csproj
+++ b/FB.AspNetCore.Identity.MongoDB/FB.AspNetCore.Identity.MongoDB.csproj
@@ -11,7 +11,9 @@
     <RepositoryUrl>https://github.com/fabian-blum/AspNetCore.Identity.MongoDB</RepositoryUrl>
     <PackageTags>MongoDB, AspNetCore, 2.0, Identity</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
